--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   screen_brightness: ^2.1.5
   android_intent_plus: ^5.3.0
   package_info_plus: ^8.3.0
+  floating: ^6.0.0
 
 dev_dependencies:
   flutter_test:
