--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   android_intent_plus: ^5.3.0
   package_info_plus: ^8.3.0
   floating: ^6.0.0
+  path_provider: ^2.1.5
+  media_store_plus: ^0.1.3
 
 dev_dependencies:
   flutter_test:
