--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   floating: ^6.0.0
   path_provider: ^2.1.5
   media_store_plus: ^0.1.3
+  just_audio: ^0.9.36
 
 dev_dependencies:
   flutter_test:
