--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,16 +31,20 @@ dependencies:
   flutter:
     sdk: flutter
   file_picker: ^10.2.0
-  video_player: ^2.10.0
   permission_handler: ^11.3.0
-  photo_manager: ^3.7.1
+  photo_manager: ^3.1.1
   screen_brightness: ^2.1.5
   android_intent_plus: ^5.3.0
   package_info_plus: ^8.3.0
   floating: ^6.0.0
-  path_provider: ^2.1.5
+  path_provider: ^2.1.3
   media_store_plus: ^0.1.3
   just_audio: ^0.9.36
+  
+  # Add media_kit
+  media_kit: ^1.1.10
+  media_kit_video: ^1.3.0
+  media_kit_libs_video: ^1.0.4
 
 dev_dependencies:
   flutter_test:
