--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,16 @@ dependencies:
   path_provider: ^2.1.3
   media_store_plus: ^0.1.3
   just_audio: ^0.9.36
-  
+  easy_video_editor: ^0.1.2
   # Add media_kit
   media_kit: ^1.1.10
   media_kit_video: ^1.3.0
   media_kit_libs_video: ^1.0.4
+
+
+  # New for Google Cast & Sharing
+  cast: ^2.1.0
+  share_plus: ^11.0.0
 
 dev_dependencies:
   flutter_test:
