--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   # New for Google Cast & Sharing
   cast: ^2.1.0
   share_plus: ^11.0.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
